[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/enemies/monkeyWorld/buttons/monkeyButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/enemies/monkeyWorld/lightBox/LightBox.gd" type="Script" id=2]

[node name="LightBox" type="Spatial"]
script = ExtResource( 2 )

[node name="monkeyButton" parent="." instance=ExtResource( 1 )]
pos = "left"

[node name="monkeyButton2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )
spotLightName = "Lights2"

[node name="monkeyButton3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )
pos = "right"
spotLightName = "Lights3"
